gitops/apps/powerdns/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-mariadb
  labels:
    app: pdns-mariadb
spec:
  selector:
    matchLabels:
      app: pdns-mariadb
  template:
    metadata:
      labels:
        app: pdns-mariadb
    spec:
      containers:
        - image: mariadb:11.6.2
          name: mariadb
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: powerdns-db
---
