gitops/apps/powerdns/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-db
spec:
  selector:
    app: pdns-mariadb
  ports:
    - port: 3306
      targetPort: mysql
